--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Inevio/magallanes-cli#readme",
   "dependencies": {
     "ip": "^1.1.3",
+    "request": "^2.72.0",
     "vertigo": "0.0.6"
   }
 }
